--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="calculator">
         <!-- Screen -->
         <span class="screen error-screen" id="error-screen"></span>
-        <span class="screen calculation-screen" id="calculation-screen"></span>
+        <input type="text" class="screen calculation-screen" id="calculation-screen" value="" readonly></span>
         <!-- First Row -->
         <span class="btn command" id="clear-all">AC</span>
         <span class="btn command" id="clear-last">DEL</span>
@@ -35,8 +35,9 @@
         <span class="btn number" data-value="3">3</span>
         <span class="btn operator" data-value="/">/</span>
         <!-- Fifth Row -->
-        <span class="btn" id="dot" data-value=".">.</span>
+        <span class="btn number" data-value=".">.</span>
         <span class="btn number" data-value="0">0</span>
+        <span class="btn number" data-value="e">e</span>
         <span class="btn command" id="calculate">=</span>
     </div>
 </body>
