Convert spans to buttons

--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
         <span class="screen error-screen" id="error-screen"></span>
         <input type="text" class="screen calculation-screen" id="calculation-screen" value="" readonly></span>
         <!-- First Row -->
-        <span class="btn command" id="clear-all">AC</span>
-        <span class="btn command" id="clear-last">DEL</span>
-        <span class="btn operator" data-value="^">^</span>
-        <span class="btn operator" data-value="+">+</span>
+        <button class="btn command" id="clear-all">AC</button>
+        <button class="btn command" id="clear-last">DEL</button>
+        <button class="btn operator" data-value="^">^</button>
+        <button class="btn operator" data-value="+">+</button>
         <!-- Second Row -->
-        <span class="btn number" data-value="7">7</span>
-        <span class="btn number" data-value="8">8</span>
-        <span class="btn number" data-value="9">9</span>
-        <span class="btn operator" data-value="-">-</span>
+        <button class="btn number" data-value="7">7</button>
+        <button class="btn number" data-value="8">8</button>
+        <button class="btn number" data-value="9">9</button>
+        <button class="btn operator" data-value="-">-</button>
         <!-- Third Row -->
-        <span class="btn number" data-value="4">4</span>
-        <span class="btn number" data-value="5">5</span>
-        <span class="btn number" data-value="6">6</span>
-        <span class="btn operator" data-value="*">*</span>
+        <button class="btn number" data-value="4">4</button>
+        <button class="btn number" data-value="5">5</button>
+        <button class="btn number" data-value="6">6</button>
+        <button class="btn operator" data-value="*">*</button>
         <!-- Fourth Row -->
-        <span class="btn number" data-value="1">1</span>
-        <span class="btn number" data-value="2">2</span>
-        <span class="btn number" data-value="3">3</span>
-        <span class="btn operator" data-value="/">/</span>
+        <button class="btn number" data-value="1">1</button>
+        <button class="btn number" data-value="2">2</button>
+        <button class="btn number" data-value="3">3</button>
+        <button class="btn operator" data-value="/">/</button>
         <!-- Fifth Row -->
-        <span class="btn number" data-value=".">.</span>
-        <span class="btn number" data-value="0">0</span>
-        <span class="btn number" data-value="e">e</span>
-        <span class="btn command" id="calculate">=</span>
+        <button class="btn number" data-value=".">.</button>
+        <button class="btn number" data-value="0">0</button>
+        <button class="btn number" data-value="e">e</button>
+        <button class="btn command" id="calculate">=</button>
     </div>
 </body>
 </html>
